tests/rosetta/out/Swift/amb.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T13:16:02Z
func amb(_ wordsets: [[String]], _ res: [String], _ idx: Int) -> Bool {
    if idx == wordsets.count {
        return true
    }
    var prev = ""
    if idx > 0 {
        prev = res[idx - 1]
    }
    var i = 0
    while i < wordsets[idx].count {
        let w = wordsets[idx][i]
        if idx == 0 || String(prev[prev.index(prev.startIndex, offsetBy: prev.count - 1)..<prev.index(prev.startIndex, offsetBy: prev.count)]) == String(w[w.index(w.startIndex, offsetBy: 0)..<w.index(w.startIndex, offsetBy: 1)]) {
            res[idx] = w
            if amb(wordsets, res, idx + 1) {
                return true
            }
        }
        i = i + 1
    }
    return false
}
func main() {
    var wordset = [["the", "that", "a"], ["frog", "elephant", "thing"], ["walked", "treaded", "grows"], ["slowly", "quickly"]]
    var res: [String] = []
    var i = 0
    while i < wordset.count {
        res = res + [""]
        i = i + 1
    }
    if amb(wordset, res, 0) {
        var out = "[" + res[0]
        var j = 1
        while j < res.count {
            out = out + " " + res[j]
            j = j + 1
        }
        out = out + "]"
        print(out)
    }
    else {
        print("No amb found")
    }
}
main()
